2009-07-07: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/AuthorDomainPolicy.pm, DkimPolicy.pm: add a
   description of the class to the documentation

2009-06-09: Jason Long <jlong@messiah.edu>
 * scripts/dkimsign.pl: fix typo in the debugging output

2009-06-09: Jason Long <jlong@messiah.edu>
 * t/signer.t: test case for bug 2803465: space between header field
   name and colon cause signature to skip that header
 * lib/Mail/DKIM/Common.pm (add_header): fix regexp so that a space
   between the header field name and the colon is not treated as part
   of the header field name (issue #2803465)

2009-06-02: Jason Long <jlong@messiah.edu>
 * t/policy.t: test for the as_string() method

 -- VERSION 0.36 --

2009-06-02: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Policy.pm (as_string): restore this method which was
   accidentally removed in 0.34.

 -- VERSION 0.35 --

2009-05-22: Jason Long <jlong@messiah.edu>
 * t/signer.t: add a test-case of a message with 10000's of blank
   lines; this seems to DoS the canonicalization routines
 * lib/Mail/DKIM/Canonicalization/{simple,relaxed,dk_simple}.pm:
   fix for bug reported on amavis-user list, patch provided by
   Mark Martinec. Thanks!

 -- VERSION 0.34 --

2009-05-20: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM.pm: rewrite the description section of the Mail::DKIM
   man page
 * lib/Mail/DKIM/Verifier.pm: document fetch_author_domain_policies()
 * Makefile.PL: release 0.34

2009-05-18: Jason Long <jlong@messiah.edu>
 * t/signer.t: add a test-case of a message without a header
 * lib/Mail/DKIM/Common.pm (init): initialize variables used by methods
   in this class; fixes RT.CPAN.ORG bug #46179

2009-04-04: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm (fetch_author_domain_policies): new method
   for fetching ADSP records for a particular message

2009-04-03: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkPolicy.pm: moved the DomainKeys-specific policy
   stuff from Policy.pm to here