@@ -1,3 +1,7 @@
+2009-07-09: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/AuthorDomainPolicy.pm, DkimPolicy.pm: changed the
+   format of how methods are documented
+
 2009-07-07: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/AuthorDomainPolicy.pm, DkimPolicy.pm: add a
    description of the class to the documentation
